fix: spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1077,7 +1077,7 @@ h3 {
     }
 
     .profile-image-link img {
-      width: clamp(4rem, 22vw, 6rem);
+      width: clamp(6rem, 22vw, 8rem);
       margin: 0;
     }
 
